feat(api): show the primes above and subrecipients below a recipient
